[gd_scene load_steps=15 format=3 uid="uid://djq52jicd1c67"]

[ext_resource type="Texture2D" uid="uid://bov3dw100dk33" path="res://Assets/Textures/Insect1.png" id="1_1433t"]
[ext_resource type="PackedScene" uid="uid://cddpy8wn110kt" path="res://Scenes/health_component.tscn" id="2_s2glg"]
[ext_resource type="Script" path="res://Scenes/HitboxComponent.gd" id="3_sto7s"]

[sub_resource type="GDScript" id="GDScript_b8wcj"]
script/source = "extends CharacterBody2D

const SPEED = 200.0
var direction = -1
var gravity = ProjectSettings.get_setting(\"physics/2d/default_gravity\")
var playerinside = false
var TimeSinceHit = 0
<<<<<<< HEAD

func _ready():
	$AnimationPlayer.play(\"Run\")

func _physics_process(delta):
	var leftwallcheck = $\"Raycasts/leftwallcheck\".is_colliding()
	var rightwallcheck = $\"Raycasts/rightwallcheck\".is_colliding()
	var leftfloorcheck = $\"Raycasts/leftfloorcheck\".is_colliding()
	var rightfloorcheck = $\"Raycasts/rightfloorcheck\".is_colliding()
	var leftsidecheck = $\"Raycasts/leftsidecheck\".is_colliding()
	var rightsidecheck = $\"Raycasts/rightsidecheck\".is_colliding()
=======
var rigidBody:bool
func _physics_process(delta):
	var leftwallcheck = $\"leftwallcheck\".is_colliding()
	var rightwallcheck = $\"rightwallcheck\".is_colliding()
	var leftfloorcheck = $\"leftfloorcheck\".is_colliding()
	var rightfloorcheck = $\"rightfloorcheck\".is_colliding()
	var leftsidecheck = $\"leftsidecheck\".is_colliding()
	var rightsidecheck = $\"rightsidecheck\".is_colliding()
	#guys i swear its one hundred percent integral to the game to allow jimmy to push items
	#the game wont be the same without this core functionality
	var rigidBodyOther:bool = $\"leftwallcheck\".get_collider() is RigidBody2D or $\"rightwallcheck\".get_collider() is RigidBody2D or $\"leftfloorcheck\".get_collider() is RigidBody2D or $\"rightfloorcheck\".get_collider() is RigidBody2D or $\"leftsidecheck\".get_collider() is RigidBody2D or $\"rightsidecheck\".get_collider() is RigidBody2D
>>>>>>> 186502ecc8a71b0394f9a2bd3e39eb1a791e6ff9
	TimeSinceHit += delta
	if not is_on_floor():
		velocity.y += gravity * delta
<<<<<<< HEAD
	
	if (direction == 1 and rightwallcheck or !rightfloorcheck or rightsidecheck):
		direction = -direction
	if (direction == -1 and leftwallcheck or !leftfloorcheck or leftsidecheck):
		direction = -direction
	if (playerinside && TimeSinceHit > .5):
		TimeSinceHit = 0
	
	velocity.x = direction * SPEED
	move_and_slide()
	
	
func die():
	queue_free()
=======
	for i in get_slide_collision_count():
			var collision = get_slide_collision(i)
			if collision && collision.get_collider() is RigidBody2D:
				rigidBody = true
				collision.get_collider().apply_central_impulse(-collision.get_normal() * Global.Player.PUSH_FORCE)
	if(rigidBody):
		velocity.x = -direction * SPEED
		move_and_slide()
	else:
		if ((direction == 1 and rightwallcheck or !rightfloorcheck or rightsidecheck) and !rigidBodyOther):
			direction = -direction
		if ((direction == -1 and leftwallcheck or !leftfloorcheck or leftsidecheck) and !rigidBodyOther):
			direction = -direction
		if (playerinside && TimeSinceHit > .5):
			TimeSinceHit = 0
			Global.Player.take_damage(20, self)
		velocity.x = direction * SPEED
		move_and_slide()
	rigidBody = false

func _on_area_2d_body_entered(body):
	if body.name == \"Player\":
		playerinside = true

func _on_area_2d_body_exited(body):
	if body.name == \"Player\":
		playerinside = false

func take_damage(damage):
	self.queue_free()


>>>>>>> 186502ecc8a71b0394f9a2bd3e39eb1a791e6ff9
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2rmsb"]
size = Vector2(43, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_yobsw"]
atlas = ExtResource("1_1433t")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_081f4"]
atlas = ExtResource("1_1433t")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrndh"]
atlas = ExtResource("1_1433t")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nt7l1"]
atlas = ExtResource("1_1433t")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_elhfk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yobsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_081f4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrndh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nt7l1")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_p1t32"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_i6a76"]
resource_name = "Run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nfeqm"]
_data = {
"RESET": SubResource("Animation_p1t32"),
"Run": SubResource("Animation_i6a76")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_stxym"]
size = Vector2(60, 36)

[node name="jimmy" type="CharacterBody2D"]
position = Vector2(161, 583)
script = SubResource("GDScript_b8wcj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_2rmsb")

[node name="Raycasts" type="Node2D" parent="."]

[node name="leftwallcheck" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(-25, 20)
metadata/_edit_lock_ = true

[node name="rightwallcheck" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(25, 20)
metadata/_edit_lock_ = true

[node name="leftfloorcheck" type="RayCast2D" parent="Raycasts"]
position = Vector2(-23, 1)
target_position = Vector2(0, 25)
metadata/_edit_lock_ = true

[node name="rightfloorcheck" type="RayCast2D" parent="Raycasts"]
position = Vector2(23, 1)
target_position = Vector2(0, 25)
metadata/_edit_lock_ = true

[node name="leftabovecheck" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(-25, -25)
metadata/_edit_lock_ = true

[node name="rightabovecheck" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(25, -25)
metadata/_edit_lock_ = true

[node name="leftsidecheck" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(-25, 0)
metadata/_edit_lock_ = true

[node name="rightsidecheck" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(25, 0)
metadata/_edit_lock_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -9)
sprite_frames = SubResource("SpriteFrames_elhfk")
animation = &"Run"
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Raycasts/leftwallcheck")
libraries = {
"": SubResource("AnimationLibrary_nfeqm")
}

[node name="HealthComponent" parent="." instance=ExtResource("2_s2glg")]

[node name="HitboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
position = Vector2(-6, 0)
script = ExtResource("3_sto7s")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(6, 7)
shape = SubResource("RectangleShape2D_stxym")

[connection signal="area_entered" from="HitboxComponent" to="HitboxComponent" method="_on_area_entered"]
[connection signal="area_exited" from="HitboxComponent" to="HitboxComponent" method="_on_area_exited"]
[connection signal="body_entered" from="HitboxComponent" to="HitboxComponent" method="_on_body_entered"]
[connection signal="body_exited" from="HitboxComponent" to="HitboxComponent" method="_on_body_exited"]
